Transferring connection from SQLite, to Azure DB. Set user-secrets for SQL login.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
+  // Connection string for the database, user-secrets will override this in development
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=hercalendar.db"
+    "DefaultConnection": ""
   },
   "Logging": {
     "LogLevel": {
@@ -8,7 +9,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*" 
+  "AllowedHosts": "*"
   // This allows any host to access the application, good for testing
   // but will be changed to something like this in production: "AllowedHosts": "hercalendar.com, www.hercalendar.com"
 }
