Implemented Admin Role: can lock, and remove other users

--- a/appsettings.json
+++ b/appsettings.json
@@ -3,6 +3,10 @@
   "ConnectionStrings": {
     "DefaultConnection": ""
   },
+  "AdminUser": {
+    "Email": "",
+    "Password": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
