Google Authorization and Login edits

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,6 +13,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Authentication": {
+    "Google": {
+      "ClientId": "",
+      "ClientSecret": ""
+    }
+  },
   "AllowedHosts": "*"
   // This allows any host to access the application, good for testing
   // but will be changed to something like this in production: "AllowedHosts": "hercalendar.com, www.hercalendar.com"
